# xscreensaver-dbus

./: .gitignore  README.md  Setup.hs  xscreensaver-dbus.cabal  xscreensaver-dbus.service
src/: Main.hs  Pool.hs
